--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "0.27.2",
     "chart.js": "3.9.1",
     "chartjs-adapter-date-fns": "2.0.0",
+    "chartjs-plugin-zoom": "1.2.1",
     "date-fns": "2.29.1",
     "history": "5.3.0",
     "i18next": "21.9.0",
