--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/react-dom": "18.0.4",
     "@types/react-table": "7.7.12",
     "axios": "1.1.2",
+    "chartjs-plugin-annotation": "2.0.1",
     "date-fns": "2.29.1",
     "history": "5.3.0",
     "i18next": "21.10.0",
